# Annadata

./: .gitignore  README.md  pyproject.toml
annadata/: config.py  llm.py  main.py
annadata/agents/: agronomist.py  stage_analyst.py
annadata/climate/: fetcher.py  geocoder.py
annadata/data/: __init__.py  location_intel.py  location_intel_eu.py  stress_responses.py  varieties.py
annadata/display/: renderer.py
annadata/engine/: simulator.py  stress.py
annadata/models/: climate.py  inputs.py  state.py
annadata/soil/: __init__.py  carbon.py  column.py  layer.py  nitrogen.py  water_flow.py
annadata/web/: __init__.py  app.py
annadata/web/templates/: index.html
