[project]
name = "annadata"
version = "0.1.0"
description = "Crop yield potential simulator — deterministic agronomy with LLM agronomist agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
]

[project.scripts]
annadata = "annadata.main:main"
